--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <h1>Unit 6 JS Drawing Basics &amp Coloring </h1>
-  <h2>6.2 JS Drawing More Shapes with Code</h2>
+  <h2>6.1 JS Making Drawings with Code</h2>
 
   <canvas id="myCanvas" data-processing-sources="myP5Code.pde">
   </canvas>
